added js code for game logic, imgs for cards

--- a/index.html
+++ b/index.html
@@ -3,25 +3,24 @@
 <head>
 	<title>Memory Game</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
 	<header>	
 		<nav class='clearfix'>
-			<a href='#'>Instructions</a>
-			<a href='#'>Game</a>
+			<a href='#instructions'>Instructions</a>
+			<a href='#game-board'>Game</a>
 		</nav>
 	</header>
 	<hr>
 	<div class='wrapper'>
 		<h1>Memory Game</h1>
-		<h2>Instructions</h2>
+		<h2 id='instructions'>Instructions</h2>
 		<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+		<p>Having only 4 cards, the game is purely one of chance. So take your chances and have a little bit of fun!</p>
 
 		<div id='game-board' class='board clearfix'>
-			<!-- <div class='card'></div>
-			<div class='card'></div>
-			<div class='card'></div>
-			<div class='card'></div> -->
+			
 		</div>
 
 		<footer>
